# plover_spanish_mqd

./: CHANGELOG.md  MANIFEST.in  README.md  README.rst  README.srt  mypy.ini  setup.cfg  setup.cfg.txt  setup.py  setup.py.txt  tox.ini
.github/workflows/: build.yaml  publish.yaml  release.yaml
plover_spanish_mqd/: spanish_mqd_double.py  spanish_mqd_single.py  system.py
plover_spanish_mqd/dictionaries/: initial.json  punctuation.json  spanish_mqd.py  spanish_mqd_common.py  spanish_mqd_dic.py  spanish_mqd_dictionary.py  spanish_mqd_double.py  spanish_mqd_single.py  user.json  user_es.json
plover_start_words/: README.md  README.rst  setup.cfg
plover_start_words/plover_start_words/: meta.py
tests/: __init__.py  bb.txt  test_blackbox.py  test_double.py  test_initial.py  test_punctuation.py  test_single.py  test_user.py
