[metadata]
name = plover_spanish_mqd
version = 3.0.0
description = Support for plover in Spanish (Melany system)
long_description = file: README.md
long_description_content_type = text/markdown
author = Noelia Ruiz
author_email = nrm1977@gmail.com
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/nvdaes/plover_spanish_mqd
project_urls =
	Source Code = https://github.com/nvdaes/plover_spanish_mqd
	Issue Tracker = https://github.com/nvdaes/plover_spanish_mqd/issues
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
keywords = plover plover_plugin

[options]
zip_safe = True
python_requires>=3.6
install_requires =
	plover>=4.0.0.dev10
	plover_python_dictionary>=1,<2
include_package_data = True
packages =
	plover_spanish_mqd

[options.extras_require]
test =
	plover>=4.0.0.dev10
	pytest>=3.0.1
lint = 
	flake8 ~= 3.7.7
	flake8-tabs == 2.1.0
type =
	mypy==0.910
[options.entry_points]
plover.system =
	Spanish MQD = plover_spanish_mqd.system

# vim: commentstring=#\ %s list


[flake8]

# Plugins
use-flake8-tabs = True
# Not all checks are replaced by flake8-tabs, however, pycodestyle is still not compatible with tabs.
use-pycodestyle-indent = False
continuation-style = hanging
## The following are replaced by flake8-tabs plugin, reported as ET codes rather than E codes.
# E121, E122, E123, E126, E127, E128,
## The following (all disabled) are not replaced by flake8-tabs,
# E124 - Requires mixing spaces and tabs: Closing bracket does not match visual indentation.
# E125 - Does not take tabs into consideration: Continuation line with same indent as next logical line.
# E129 - Requires mixing spaces and tabs: Visually indented line with same indent as next logical line
# E131 - Requires mixing spaces and tabs: Continuation line unaligned for hanging indent
# E133 - Our preference handled by ET126: Closing bracket is missing indentation


# Reporting
statistics = True
doctests = True
show-source = True

# Options
max-complexity = 15
max-line-length = 110
# Final bracket should match indentation of the start of the line of the opening bracket
hang-closing = False

ignore =
	W191,  # indentation contains tabs
	W503,  # line break before binary operator. We want W504(line break after binary operator)
	E402 # Import not at top level

builtins = # inform flake8 about functions we consider built-in.
	_, # translation lookup
	pgettext, # translation lookup

exclude = # don't bother looking in the following subdirectories / files.
	.git,
	__pycache__,
	.tox,
	build,

filename =
	*.py


