[metadata]
name = plover_start_words
version = 0.0.1
description = Plugins for assigning strokes to output if it starts a word
long_description = file: README.rst
author = Noelia Ruiz
author_email = nrm1977@gmail.com
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/nvdaes/plover_starts_words
classifiers =
    Development Status :: 1 - Planning
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev6
packages =
    plover_start_words

[options.entry_points]
plover.meta =
    initial = plover_start_words.meta:initial
